--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -41,6 +41,12 @@ header {
   }
 }
 
+main{
+  h1{
+    padding: 0 $gutter;
+  }
+}
+
 #navWrapper {
   background-color: #fff;
 }
